<resources>
    <string name="app_name">practice_7</string>
    <string name="order_coffee">Order Coffee</string>
    <string name="fill_resources">Fill Resources</string>
    <string name="collect_money">Collect Money</string>
    <string name="water">Water</string>
    <string name="milk">Milk</string>
    <string name="coffee_beans">Coffee Beans</string>
    <string name="disposable_cups">Disposable Cups</string>
</resources>